markdown: fix embeds stretching mobile view

--- a/frontend/src/components/common/WalkthroughsList/WalkthroughsListItem/index.module.css
+++ b/frontend/src/components/common/WalkthroughsList/WalkthroughsListItem/index.module.css
@@ -5,7 +5,6 @@
   background: var(--box-content-bg-color);
 
   --video-embed-width: 100%;
-  --video-embed-height: 100%;
   --video-embed-aspect-ratio: 16 / 9;
 }
 
